--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
     <!--leaflet.ajax for asynchronously adding geojson data-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
+
     <!--story map plugin-->
-    <script type="module", src="js/storymap.2.5.js"></script>
+    <script src="js/storymap.2.5.js"></script>
 
     <!--link to JS file-->
     <script src="js/storymap.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
 </head>
 <body>
   <div id="storymap" class="container-fluid" >
@@ -48,17 +49,17 @@
     <div class="row">
       <div class="col-sm-6 col-md-8 storymap-map"></div>
       <div class="col-sm-6 col-md-4 storymap-story">
-        <section data-scene="scene2">
+        <section data-scene="scene1">
           <h1>Obesity Rates in America</h1>
             <p1></p1>
         </section>
 
-        <section data-scene="scene3">
+        <section data-scene="scene2">
           <h1>Exercise Rates in America</h1>
             <p1></p1>
         </section>
 
-        <section data-scene="scene4">
+        <section data-scene="scene3">
           <h1>Gyms in Corvallis</h1>
             <p1>In order to encourage others to participate in physical exercise, one step
             that can help solve this issue is revealing locations of any nearby gyms. In
