--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
     <!--add favicon for the web page-->
     <link rel="shortcut icon" href="img/dumbbell-512.ico" type="image/x-icon">
@@ -19,9 +19,6 @@
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/storymap.2.5.css">
-
-    <!--link to CSS file-->
-    <link rel="stylesheet" href="css/style.css">
 
     <!--add required libraries-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
@@ -34,32 +31,80 @@
     <!--leaflet.ajax for asynchronously adding geojson data-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
-    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
-
     <!--story map plugin-->
     <script src="js/storymap.2.5.js"></script>
 
-    <!--link to JS file-->
-    <script src="js/storymap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js"></script>
 </head>
 <body>
   <div id="storymap" class="container-fluid" >
-    <i class="fab fa-facebook"></i>
     <div class="row">
       <div class="col-sm-6 col-md-8 storymap-map"></div>
       <div class="col-sm-6 col-md-4 storymap-story">
+        <div id="storymap" class="container-fluid" >
+
+        <div>
+          <h1>Introduction</h1>
+            <p>Physical exercise and staying in shape is very critical to living a healthy life. While
+            many people are aware and know the benefits of this, many people struggle to consistently
+            be physically active. This can be due to living a busy lifestyle, physical limitation, and/or
+            a lack of motivation. The purpose of this web map, however, is to help increase motivation for
+            physical exercise as well as eating healthier. Specifically, revealing obesity rates and exercise
+            rates by state can raise awareness of our nations lack of healthy habits as a whole. Along with
+            that, a map of gyms in Corvallis are displayed, which can help those who are making an effort to
+            live a healthier lifestyle have a better idea of where to go to begin participating in an activity
+            that will benefit them and that they will enjoy. While a map of these locations can be done in any
+            city, this map is a simple example of how to reveal locations so users can better decide where to
+            go to start exercising.
+            </p>
+        </div>
+
         <section data-scene="scene1">
           <h1>Obesity Rates in America</h1>
-            <p1></p1>
+            <p1>While it is important that everyone participates in physical activity regularly,
+            understanding the rates of obesity by state can help assess where efforts to encourage
+            more people to exercise is important. On this map are obesity rates by state as of 2017.
+            States with colors closer to white or orange have low rates whereas states with darker
+            colors have higher rates. As shown on the map, a lot of the western states as well as the
+            northeaster states have low obesity rates. On the other hand, states in the Midwest have
+            high rates but the southern states have the highest obesity rates. States with the highest
+            obesity rates were West Virginia (38.1%), Mississippi (37.3%), Oklahoma (36.5%), Iowa (36.4%),
+            and Alabama (36.3%), while states with the smallest rates were Colorado (22.6%), Washington
+            D.C. (23%), Hawaii (23.8%), California (25.1%), Utah, and Montana (both at 25.3%). A full list
+            of rates, which was the data source for this map, can be found near the end of this story map.</p1>
         </section>
 
         <section data-scene="scene2">
-          <h1>Exercise Rates in America</h1>
-            <p1></p1>
+          <p>The obesity rate for Alaska is 34.2%.</p>
         </section>
 
         <section data-scene="scene3">
+          <p>The obesity rate for Hawaii is 23.8%.</p>
+        </section>
+
+        <section data-scene="scene4">
+          <h1>Exercise Rates in America</h1>
+            <p1>Like with obesity rates, exercise rates by state also vary. Western, northeastern states,
+            and Minnesota have average to high exercise rates. On the other hand, several midwestern
+            states as well as southern states have average to low exercise rates, although there is more
+            variability with exercise rates in these areas as opposed to that of the previous map. An
+            interesting correlation that can be noted from this map and the obesity map is that states with
+            higher obesity rates seem to be correlated with having lower exercise rates, and vice versa.
+            States with the highest exercise rates are Colorado (32.5%), Idaho (31.4%), New Hampshire and
+            Washington D.C. (both at 30.7%), Vermont (29.5%), and Washington (28.9%), while states with the
+            lowest rates include Mississippi (13.5%), Kentucky (14.6%), South Carolina (14.8%), Indiana (15.1%),
+            and Arkansas (15.7%). A link to all of the numbers can be found towards the end.</p1>
+        </section>
+
+        <section data-scene="scene5">
+          <p>The exercise rate for Alaska is 27.9%.</p>
+        </section>
+
+        <section data-scene="scene6">
+          <p>The exercise rate for Hawaii is 24.4%.</p>
+        </section>
+
+        <section data-scene="scene7">
           <h1>Gyms in Corvallis</h1>
             <p1>In order to encourage others to participate in physical exercise, one step
             that can help solve this issue is revealing locations of any nearby gyms. In
@@ -74,8 +119,37 @@
             on one map can help people decide which gym they will want to attend the most,
             which may motivate them to be more active in exercising.</p1>
         </section>
+
+        <img src="https://www.gannett-cdn.com/-mm-/14d38e3329c6f1f889b4c48cfb975ddc97bd20bb/c=0-0-3495-1975/local/-/media/2018/06/28/USATODAY/USATODAY/636657854872922413-GettyImages-862317986.jpg?width=3200&height=1680&fit=crop" alt="Running Man" width="1200" height="800">
+
+        <div2>
+          <h1>Closing Remarks</h1>
+            <p>While knowing these locations can make it easier for people to exercise, it is not the
+            final solution. Being physically active and healthy is all a personal choice. People can
+            choose to be physically active and have a healthy diet or to be lazy and continue to eat
+            food that is destructive to their bodies. Despite this, providing resources and directing
+            people to locations that can help start and maintain healthy lifestyles is very capable of
+            increasing low exercise rates and decreasing high obesity rates within our country. This is
+            an example of how this can be made possible by the use of web maps.</p>
+            <ul> Sources:
+            <li>CBS News, "States with the highest and lowest exercise rates", June 28, 2018, https://www.cbsnews.com/news/states-with-the-highest-and-lowest-exercise-rates/</li>
+            <li>The State of Obesity, "Adult Obesity in the United States", 2018, https://stateofobesity.org/adult-obesity/</li>
+            <li>All gym locations in Corvallis, Oregon acquired on Google Maps</li>
+            <li>Project based on Storymap.js created by Bo Zhao of Oregon State University</li>
+            </ul>
+        </div2>
+
+        <div3>
+          <h2>Thanks for watching! Click on the Facebook icon to share this story map with others or click
+          the GitHub icon to access the repository.</h2>
+            <!--facebook icon-->
+            <a class="fab fa-facebook-square" href="https://www.facebook.com/sharer/sharer.php?u=kkstuvstad.github.io/mystorymap/index.html" target="_blank" style="cursor: pointer; font-size:24px; color:darkblue; z-index:1003; top: 4%; left:5px;"></a>
+            <a class="fab fa-github" href="https://github.com/kkstuvstad/mystorymap" target="_blank" style="cursor: pointer; font-size:24px; color:black; z-index:1003; top: 4%; left:5px;"></a>
+        </div3>
       </div>
     </div>
   </div>
+  <!--link to JS file-->
+  <script src="js/storymap.js"></script>
 </body>
 </html>
