--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -14,9 +14,10 @@
 
     <!--add favicon for the web page-->
     <link rel="shortcut icon" href="img/dumbbell-512.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css"/>
 
     <!--Font-->
-    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/storymap.2.5.css">
 
