--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             clicking on each point, the name of the gym comes up, and includes membership
             prices and amenities offered. Having all of the general information about this
             on one map can help people decide which gym they will want to attend the most,
-            which may motivate them to be more active in exercising.</p1>
+            which may motivate them to be more active in exercising. All of these locations
+            have at least a three star rating on Google Maps.</p1>
         </section>
 
         <img src="https://www.gannett-cdn.com/-mm-/14d38e3329c6f1f889b4c48cfb975ddc97bd20bb/c=0-0-3495-1975/local/-/media/2018/06/28/USATODAY/USATODAY/636657854872922413-GettyImages-862317986.jpg?width=3200&height=1680&fit=crop" alt="Running Man" width="1200" height="800">
@@ -135,6 +136,9 @@
             <ul> Sources:
             <li>CBS News, "States with the highest and lowest exercise rates", June 28, 2018, https://www.cbsnews.com/news/states-with-the-highest-and-lowest-exercise-rates/</li>
             <li>The State of Obesity, "Adult Obesity in the United States", 2018, https://stateofobesity.org/adult-obesity/</li>
+            <li>US States Data Source: Created by Mike Bostock, https://d3js.org/</li>
+            <li>Running Man Image URL: https://www.gannett-cdn.com/-mm-/14d38e3329c6f1f889b4c48cfb975ddc97bd20bb/c=0-0-3495-1975/local/-/media/2018/06/28/USATODAY/USATODAY/636657854872922413-GettyImages-862317986.jpg?width=3200&height=1680&fit=crop</li>
+            <li>Basemap: OpenStreetMap Black and White, https://leaflet-extras.github.io/leaflet-providers/preview/#filter=OpenStreetMap.BlackAndWhite</li>
             <li>All gym locations in Corvallis, Oregon acquired on Google Maps</li>
             <li>Project based on Storymap.js created by Bo Zhao of Oregon State University</li>
             </ul>
